# padprobe

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish-gamepad-widget.yml  publish-padprobe.yml  publish.yml
crates/padprobe-gamepad-widget/: Cargo.toml  README.md
crates/padprobe-gamepad-widget/src/: lib.rs  widget.rs
docs/: hardware-test-matrix.md
gamepad-widget/: Cargo.toml  README.md
gamepad-widget/examples/: controller.rs  stick.rs
gamepad-widget/src/: lib.rs  model.rs  stick.rs  theme.rs  widget.rs
gamepad-widget/src/model/: cluster.rs  mod.rs  state.rs  value.rs
gamepad-widget/src/stick/: mod.rs  render.rs  tests.rs
gamepad-widget/src/widget/: layout.rs  mod.rs
gamepad-widget/src/widget/controller/: controls.rs  controls_tests.rs  mod.rs  shell.rs  stick.rs
gamepad-widget/src/widget/controls/: mod.rs  stick.rs  tests.rs
src/: app.rs  keymap.rs  lib.rs  logging.rs  main.rs  report.rs  rumble.rs  terminal.rs  ui.rs
src/analysis/: controls.rs  drift.rs  mod.rs  range.rs  timing.rs
src/analysis/controls/: expected.rs  tests.rs
src/analysis/drift/: metrics.rs  mod.rs  session.rs  tests.rs
src/analysis/range/: metrics.rs  mod.rs  session.rs  tests.rs
src/app/: connection.rs  device.rs  diagnostics.rs  event.rs  event_filter.rs  input.rs  mod.rs  navigation.rs  tests.rs
src/app/tests/: device.rs  events.rs  input.rs  mod.rs  navigation.rs
src/report/: capture.rs  export.rs  mod.rs  tests.rs  text.rs
src/ui/: controls.rs  dashboard.rs  devices.rs  diagnostics.rs  drift.rs  events.rs  footer.rs  gamepad.rs  layout.rs  live_state.rs  mod.rs  overlays.rs  range.rs  tabs.rs  tests.rs  timing.rs
src/ui/diagnostics/: mod.rs  raw.rs  sticks.rs  triggers.rs
src/ui/gamepad/: adapter.rs  mod.rs  state.rs
src/ui/gamepad/adapter/: controls.rs  mod.rs  tests.rs
src/widgets/gamepad/: mod.rs  model.rs  widget.rs
