[package]
name = "padprobe"
version = "0.1.0"
edition = "2024"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "MIT OR Apache-2.0"
description = "PadProbe is a terminal-based game-controller diagnostic tool for testing buttons, analog ranges, stick drift, event timing, mappings, and rumble."
repository = "https://github.com/kristoferssolo/padprobe"
homepage = "https://github.com/kristoferssolo/padprobe"
keywords = ["gamepad", "controller", "hid"]
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
color-eyre = "0.6"
gilrs = "0.11.2"
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
