[workspace]
members = [".", "gamepad-widget"]
resolver = "3"

[package]
name = "padprobe"
version = "0.1.0"
edition = "2024"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "MIT OR Apache-2.0"
description = "PadProbe is a terminal-based game-controller diagnostic tool for testing buttons, analog ranges, stick drift, event timing, mappings, and rumble."
repository = "https://github.com/kristoferssolo/padprobe"
homepage = "https://github.com/kristoferssolo/padprobe"
keywords = ["gamepad", "controller", "hid"]
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
gilrs = "0.11"
gamepad-widget = { path = "gamepad-widget" }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
claims = "0.8"
rstest = "0.26"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[lints]
workspace = true
