[package]
name = "padprobe-gamepad-widget"
version = "0.1.0"
edition = "2024"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "MIT OR Apache-2.0"
description = "A backend-neutral Ratatui widget for displaying gamepad controls"
repository = "https://github.com/kristoferssolo/padprobe"
readme = "README.md"
keywords = ["gamepad", "controller", "ratatui", "tui"]
categories = ["command-line-interface", "visualization"]

[dependencies]
ratatui = "0.30"
